[package]
name = "quiz-chatbot-nc"
version = "0.1.0"
authors = ["a20034294"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
json = "0.12"