[package]
name = "quiz-chatbot-nc"
version = "1.0.0"
authors = ["a20034294"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
json = "0.12"
rand = "0.7.3"
sha2 = "0.9"
hex = "0.4"
base64 = "0.12"